# cv4-registry

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  example.env  pyproject.toml  sonar-project.properties
.github/workflows/: code-analysis.yaml.yml
scripts/: docker-compose.test.yaml
src/dedi_registry/: __init__.py  app.py  asgi.py
src/dedi_registry/cache/: cache.py  memory_driver.py  redis_driver.py
src/dedi_registry/cli/: cli.py  user.py  util.py
src/dedi_registry/data/templates/: admin_login.html  base.html  home.html  network_detail.html  networks.html
src/dedi_registry/database/: database.py
src/dedi_registry/database/mongo_driver/: __init__.py  config.py  database.py  network.py  user.py
src/dedi_registry/etc/: consts.py  enums.py  metrics.py  utils.py
src/dedi_registry/model/: config.py  json_patch.py  network.py  node.py  user.py
src/dedi_registry/router/: __init__.py  admin.py  api.py  network.py  ui.py  util.py
tests/: smoke_test.py
